syntax="proto3";

package admin;


service AdminService{
    rpc CreateAdmin(AdminRequest) returns (AdminResponse){}
    rpc GetAdminById(IdRequest) returns (AdminResponse){}
    rpc CheckField(CheckFieldReq) returns (CheckFieldRes) {}
    rpc UpdateToken(RequestForTokens) returns (AdminResponse) {}
    rpc GetByEmail(EmailReq) returns (AdminResponse);
}

message empty{}

message EmailReq {
    string email = 1;
}

message AdminRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    string acces_token = 4;
    string refresh_token = 5;
}

message AdminResponse{
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    repeated Post posts = 5;
    string refresh_token = 6;
    string created_at = 7;
    string updated_at = 8;
}

message Post {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string created_at = 4;
    string updated_at = 5;
}

message IdRequest{
    int64 id = 1;
}

message CheckFieldReq {
    string field = 1;
    string value = 2;
}

message CheckFieldRes {
    bool exists = 1;
}

message RequestForTokens {
    int64 id = 1;
    string refresh_token = 2;
    string acces_token = 3;
}